test/fixtures/typecheck/pass/TupleFirst.kite
module TupleFirst

first : (a -> b) -> (a, c) -> (b, c)
first = f (x, y) -> (f x, y)
