test/fixtures/typecheck/fail/TuplePatternMismatch.kite
module TuplePatternMismatch

type Nat = Zero | Suc Nat

f : (Bool, a) -> a
f = (True, y) -> y
    (Zero, x) -> x
